--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto de F&iacute;sica | Grupo 5</title>
+    <link rel="shortcut icon" href="./img/icon.png" type="image/x-icon">
     <!--CSS-->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
@@ -17,7 +18,7 @@
 <body>
     <!--HEADER-->
     <header>
-        <h1 class="text-center">CALCULADORA DE VECTORES</h1>
+        <h1 class="text-center">VectorLab - Calculadora de vectores</h1>
     </header>
     <!--SECTION-->
     <section>
