--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="row">
         <!--MY VECTORS-->
         <div class="col-sm-12 col-md-4 col-lg-3 rounded my-vectors">
-            <h3 class="text-center text-light">Mis vectores</h3>
+            <h3 class="text-center text-light">My vectores</h3>
             <!--VECTORS SCREEN-->
             <div class="d-block vectors box box-cont">
                 <ul class="list-group"></ul>
