--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <!--HEADER-->
     <header>
-        <h1 class="text-center">VectorLab - Calculadora de vectores</h1>
+        <h1 class="text-center">VectorLab - Calculadora de Vectores</h1>
     </header>
     <!--SECTION-->
     <section>
